force-app/main/default/objects/ClaimDiagnosis__x/ClaimDiagnosis__x.object-meta.xml
<CustomObject>
    <externalDataSource>ClaimsDataSource</externalDataSource>
    <externalName>public$claimdiagnosis</externalName>
    <label>Claim Diagnosis</label>
    <pluralLabel>Claim Diagnoses</pluralLabel>
</CustomObject>