force-app/main/default/objects/ClaimDiagnosis__x/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <externalDeveloperName>claim</externalDeveloperName>
    <inlineHelpText>ID of the claim related to this record.</inlineHelpText>
    <label>Claim</label>
    <length>16</length>
    <referenceTo>ClaimHeader__x</referenceTo>
    <relationshipLabel>Claim Diagnoses</relationshipLabel>
    <relationshipName>Claim_Diagnoses</relationshipName>
    <type>ExternalLookup</type>
</CustomField>