force-app/main/default/objects/ClaimDiagnosis__x/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <externalDeveloperName>diagnosis</externalDeveloperName>
    <inlineHelpText>Diagnosis code or description.</inlineHelpText>
    <label>Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>