force-app/main/default/objects/ClaimDiagnosis__x/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <externalDeveloperName>linenumber</externalDeveloperName>
    <inlineHelpText>Claim diagnosis ID number.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>