force-app/main/default/objects/ClaimDiagnosis__x/fields/SourceSystemIdentifier__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemIdentifier__c</fullName>
    <externalDeveloperName>sourcesystemidentifier</externalDeveloperName>
    <inlineHelpText>Identifier of the system where this record was sourced from.</inlineHelpText>
    <label>Source System Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>